--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "tetris",
   "version": "1.0.0",
   "description": "",
-  "main": "test.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "esbuild index.js --bundle --outfile=bundle.js --watch"
   },
   "keywords": [],
   "author": "",
