--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "tetris",
   "version": "1.0.0",
-  "description": "",
   "main": "test.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0"
-  }
+    "jest-environment-jsdom": "^29.6.0"
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "devDependencies": {
+    "jest": "^29.6.0"
+  },
+  "description": ""
 }
