--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "esbuild": "^0.18.11",
-    "jest-environment-jsdom": "^29.6.0",
-    "web-animations-js": "^2.3.2"
+    "jest-environment-jsdom": "^29.6.0"
   },
   "directories": {
     "test": "tests"
